--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>React App</title>
+        <title>jhg.app</title>
     </head>
     <body data-bs-theme="dark" style="background-color: #253863 !important">
         <noscript>You need to enable JavaScript to run this app.</noscript>
