added home page only

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-    <title>Bun + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./frontend.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- <link rel="icon" type="image/svg+xml" href="./logo.svg" /> -->
+        <title>jhg.app</title>
+    </head>
+    <body data-bs-theme="dark" style="background-color: #253863 !important">
+        <div id="root"></div>
+        <script type="module" src="./main.tsx"></script>
+    </body>
 </html>
