--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- <link rel="icon" type="image/svg+xml" href="./logo.svg" /> -->
+        <link rel="icon" type="image/png" href="./assets/favicon.png" />
         <title>jhg.app</title>
     </head>
     <body data-bs-theme="dark" style="background-color: #253863 !important">
